# sem_tocar

./: .gitignore  QR_logs.csv  README.md  credentials.json  crypto.key_OLD  gcal_token  gmail_token  pyproject.toml  secret.key  secretary.py  sem_tocar.py  sem_tocar_GUI.py  token_cal.pickle  token_mail.pickle
json/: TESTES_all_events_2021-03-28.json  TESTES_all_events_2021-03-29.json  TESTES_today_events.json  calendars.json
modules/: JSON_handler.py  QR_handler.py  calendar_handler.py  door_handler.py  email_handler.py  gpio_handler.py  printer_handler.py  sem_parar_config.py  sem_tocar_config.py  services.py  sms_handler.py  toolbox.py  webcam_handler.py  whatsapp_handler.py
