[tool.poetry]
name = "sem_tocar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.1.0"
google-auth-oauthlib = "^0.4.4"
opencv-python = "^4.5.1"
numpy = "^1.20.2"
pyzbar = "^0.1.8"
cryptography = "^3.4.7"
qrcode = "^6.1"
pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
