[tool.poetry]
name = "sem-tocar"
version = "2.0"
description = ""
authors = ["Guilherme C Bertonzzin <gbertonzzin@gmail.com>"]
license = "GLPv3"
readme = "README.md"
packages = [{include = "sem_tocar"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
google-api-python-client = "^2.66.0"
google-auth-oauthlib = "^0.7.1"
coloredlogs = "^15.0.1"
pyzbar = "^0.1.9"
numpy = "^1.23.5"
qrcode = "^7.3.1"
pyautogui = "^0.9.53"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
